# geoguessr-agent

./: .env.example  .env.local  .gitignore  LICENSE.md  README.md  browser_ops.py  geoguessr.py  hello.py  main.py  output.py  pyproject.toml  scorer.py  vlm.py
.cursor/rules/: geoguessr.mdc
